Guarda de competencia repetida, e empacotamento para instalar nos outros
GUARDA DE COMPETENCIA

O config passa a guardar saida.ultimoArquivo e saida.ultimaGeracao. Se
o nome montado for igual ao da ultima geracao, a janela avisa em
laranja e o Gerar pergunta antes de fazer qualquer coisa. E o engano
mais provavel numa rotina mensal: esquecer de trocar a competencia e
gravar o mes novo por cima do anterior.

No --console nao ha quem responda, entao vira aviso e segue - o
agendador nao pode travar esperando uma tecla. Desistir na pergunta
levanta Cancelado, que a janela trata em cinza, sem caixa vermelha:
desistir nao e falha.

CONFIG NA PASTA DO USUARIO

Instalado em pasta protegida, o programa nao conseguiria regravar o
config. Agora ele testa a escrita de verdade - canWrite() mente em
algumas pastas do Windows - e, se nao puder, leva o config para
%APPDATA%\\Adapted Dom Import, copiando o que veio instalado.

EMPACOTAMENTO

criar-instalador.bat monta o programa com jpackage: pasta dist\\ com o
.exe, o icone do escritorio e o Java embutido. A maquina de destino
NAO precisa ter Java. Na outra ponta, instalar.bat copia para
%LOCALAPPDATA%, cria atalho na area de trabalho e no menu Iniciar, e
preserva o config de uma instalacao anterior. Sem senha de
administrador. desinstalar.bat desfaz.

Se a maquina tiver o WiX v3, sai tambem um .msi; sem ele o script
avisa e segue com a pasta, que ja resolve.

Detalhes que custaram teste:
  - --add-modules derruba o Java embutido de 157 MB para 83 MB
  - java.xml entra junto com java.desktop, mas fica declarado
  - a versao sai do proprio .java por findstr, para nao ter dois
    lugares para atualizar
  - o .ico do .exe e gerado por exemplo/gerar-ico.py, 7 tamanhos

Conferido: javac --release 8 -Xlint:all,-options -Werror sem um aviso,
class file version 52, txt igual ao gabarito byte a byte, o aviso de
repetido aparecendo na janela e no console, e o aplicativo empacotado
rodando com o Java dele e gerando o mesmo arquivo. O jpackag